--- a/src/components/CharacterEditor/CharacterEditor.module.css
+++ b/src/components/CharacterEditor/CharacterEditor.module.css
@@ -4,10 +4,12 @@
 }
 
 .maxWidthWrapper {
+  isolation: isolate;
 }
 
 .header {
   padding-bottom: 64px;
+  width: 65%;
 }
 
 .title {
@@ -24,7 +26,27 @@
 }
 
 .characterWrapper {
+  position: fixed;
+  top: 15%;
+  left: 60%;
+  bottom: 5%;
+  min-height: 500px;
+}
+
+.character {
+  height: 100%;
 }
 
 .controlColumn {
+  width: 50%;
+  overflow-x: scroll;
+}
+
+.background {
+  position: fixed;
+  top: 60%;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: hsl(195deg, 20%, 86%);
 }
